sdk/monitor/arm-monitor/samples/v7/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [actionGroupsCreateOrUpdateSample.ts][actiongroupscreateorupdatesample]                                             | Create a new action group or update an existing one. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/createOrUpdateActionGroup.json                                                                                                                                                                                                                                                                                                                                          |
| [actionGroupsDeleteSample.ts][actiongroupsdeletesample]                                                             | Delete an action group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/deleteActionGroup.json                                                                                                                                                                                                                                                                                                                                                                               |
| [actionGroupsEnableReceiverSample.ts][actiongroupsenablereceiversample]                                             | Enable a receiver in an action group. This changes the receiver's status from Disabled to Enabled. This operation is only supported for Email or SMS receivers. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/enableReceiver.json                                                                                                                                                                                                                                          |
| [actionGroupsGetSample.ts][actiongroupsgetsample]                                                                   | Get an action group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/getActionGroup.json                                                                                                                                                                                                                                                                                                                                                                                     |
| [actionGroupsGetTestNotificationsSample.ts][actiongroupsgettestnotificationssample]                                 | Get the test notifications by the notification id x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/getTestNotifications.json                                                                                                                                                                                                                                                                                                                                                  |
| [actionGroupsListByResourceGroupSample.ts][actiongroupslistbyresourcegroupsample]                                   | Get a list of all action groups in a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/listActionGroups.json                                                                                                                                                                                                                                                                                                                                                   |
| [actionGroupsListBySubscriptionIdSample.ts][actiongroupslistbysubscriptionidsample]                                 | Get a list of all action groups in a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/listActionGroups.json                                                                                                                                                                                                                                                                                                                                                     |
| [actionGroupsPostTestNotificationsSample.ts][actiongroupsposttestnotificationssample]                               | Send test notifications to a set of provided receivers x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/postTestNotifications.json                                                                                                                                                                                                                                                                                                                                            |
| [actionGroupsUpdateSample.ts][actiongroupsupdatesample]                                                             | Updates an existing action group's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-09-01/examples/patchActionGroup.json                                                                                                                                                                                                                                                                                                         |
| [activityLogAlertsCreateOrUpdateSample.ts][activitylogalertscreateorupdatesample]                                   | Create a new activity log alert or update an existing one. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/createOrUpdateActivityLogAlert.json                                                                                                                                                                                                                                                                                                                               |
| [activityLogAlertsDeleteSample.ts][activitylogalertsdeletesample]                                                   | Delete an activity log alert. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/deleteActivityLogAlert.json                                                                                                                                                                                                                                                                                                                                                                    |
| [activityLogAlertsGetSample.ts][activitylogalertsgetsample]                                                         | Get an activity log alert. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/getActivityLogAlert.json                                                                                                                                                                                                                                                                                                                                                                          |
| [activityLogAlertsListByResourceGroupSample.ts][activitylogalertslistbyresourcegroupsample]                         | Get a list of all activity log alerts in a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/listActivityLogAlerts.json                                                                                                                                                                                                                                                                                                                                        |
| [activityLogAlertsListBySubscriptionIdSample.ts][activitylogalertslistbysubscriptionidsample]                       | Get a list of all activity log alerts in a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/listActivityLogAlerts.json                                                                                                                                                                                                                                                                                                                                          |
| [activityLogAlertsUpdateSample.ts][activitylogalertsupdatesample]                                                   | Updates an existing ActivityLogAlertResource's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2017-04-01/examples/patchActivityLogAlert.json                                                                                                                                                                                                                                                                                        |
| [activityLogsListSample.ts][activitylogslistsample]                                                                 | Provides the list of records from the activity logs. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/GetActivityLogsFiltered.json                                                                                                                                                                                                                                                                                                                                            |
| [alertRuleIncidentsGetSample.ts][alertruleincidentsgetsample]                                                       | Gets an incident associated to an alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/getAlertRuleIncident.json                                                                                                                                                                                                                                                                                                                                                       |
| [alertRuleIncidentsListByAlertRuleSample.ts][alertruleincidentslistbyalertrulesample]                               | Gets a list of incidents associated to an alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listAlertRuleIncidents.json                                                                                                                                                                                                                                                                                                                                             |
| [alertRulesCreateOrUpdateSample.ts][alertrulescreateorupdatesample]                                                 | Creates or updates a classic metric alert rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/createOrUpdateAlertRule.json                                                                                                                                                                                                                                                                                                                                                 |
| [alertRulesDeleteSample.ts][alertrulesdeletesample]                                                                 | Deletes a classic metric alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/deleteAlertRule.json                                                                                                                                                                                                                                                                                                                                                                     |
| [alertRulesGetSample.ts][alertrulesgetsample]                                                                       | Gets a classic metric alert rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/getAlertRule.json                                                                                                                                                                                                                                                                                                                                                                           |
| [alertRulesListByResourceGroupSample.ts][alertruleslistbyresourcegroupsample]                                       | List the classic metric alert rules within a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listAlertRule.json                                                                                                                                                                                                                                                                                                                                              |
| [alertRulesListBySubscriptionSample.ts][alertruleslistbysubscriptionsample]                                         | List the classic metric alert rules within a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listAlertRuleBySubscription.json                                                                                                                                                                                                                                                                                                                                  |
| [alertRulesUpdateSample.ts][alertrulesupdatesample]                                                                 | Updates an existing classic metric AlertRuleResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/patchAlertRule.json                                                                                                                                                                                                                                                                                              |
| [autoscaleSettingsCreateOrUpdateSample.ts][autoscalesettingscreateorupdatesample]                                   | Creates or updates an autoscale setting. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/createOrUpdateAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                 |
| [autoscaleSettingsDeleteSample.ts][autoscalesettingsdeletesample]                                                   | Deletes and autoscale setting x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/deleteAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                    |
| [autoscaleSettingsGetSample.ts][autoscalesettingsgetsample]                                                         | Gets an autoscale setting x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/getAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                           |
| [autoscaleSettingsListByResourceGroupSample.ts][autoscalesettingslistbyresourcegroupsample]                         | Lists the autoscale settings for a resource group x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/listAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                  |
| [autoscaleSettingsListBySubscriptionSample.ts][autoscalesettingslistbysubscriptionsample]                           | Lists the autoscale settings for a subscription x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/listAutoscaleSettingBySubscription.json                                                                                                                                                                                                                                                                                                                                      |
| [autoscaleSettingsUpdateSample.ts][autoscalesettingsupdatesample]                                                   | Updates an existing AutoscaleSettingsResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/patchAutoscaleSetting.json                                                                                                                                                                                                                                                                                              |
| [baselinesListSample.ts][baselineslistsample]                                                                       | **Lists the metric baseline values for a resource**. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2019-03-01/examples/metricBaselines.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionEndpointsCreateSample.ts][datacollectionendpointscreatesample]                                       | Creates or updates a data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsCreate.json                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionEndpointsDeleteSample.ts][datacollectionendpointsdeletesample]                                       | Deletes a data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsDelete.json                                                                                                                                                                                                                                                                                                                                                       |
| [dataCollectionEndpointsGetSample.ts][datacollectionendpointsgetsample]                                             | Returns the specified data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsGet.json                                                                                                                                                                                                                                                                                                                                              |
| [dataCollectionEndpointsListByResourceGroupSample.ts][datacollectionendpointslistbyresourcegroupsample]             | Lists all data collection endpoints in the specified resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsListByResourceGroup.json                                                                                                                                                                                                                                                                                                         |
| [dataCollectionEndpointsListBySubscriptionSample.ts][datacollectionendpointslistbysubscriptionsample]               | Lists all data collection endpoints in the specified subscription x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsListBySubscription.json                                                                                                                                                                                                                                                                                                             |
| [dataCollectionEndpointsUpdateSample.ts][datacollectionendpointsupdatesample]                                       | Updates part of a data collection endpoint. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionEndpointsUpdate.json                                                                                                                                                                                                                                                                                                                                               |
| [dataCollectionRuleAssociationsCreateSample.ts][datacollectionruleassociationscreatesample]                         | Creates or updates an association. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsCreate.json                                                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRuleAssociationsDeleteSample.ts][datacollectionruleassociationsdeletesample]                         | Deletes an association. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionRuleAssociationsGetSample.ts][datacollectionruleassociationsgetsample]                               | Returns the specified association. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsGet.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRuleAssociationsListByResourceSample.ts][datacollectionruleassociationslistbyresourcesample]         | Lists associations for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsListByResource.json                                                                                                                                                                                                                                                                                                                             |
| [dataCollectionRuleAssociationsListByRuleSample.ts][datacollectionruleassociationslistbyrulesample]                 | Lists associations for the specified data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRuleAssociationsListByRule.json                                                                                                                                                                                                                                                                                                                     |
| [dataCollectionRulesCreateSample.ts][datacollectionrulescreatesample]                                               | Creates or updates a data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesCreate.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesDeleteSample.ts][datacollectionrulesdeletesample]                                               | Deletes a data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesDelete.json                                                                                                                                                                                                                                                                                                                                                               |
| [dataCollectionRulesGetSample.ts][datacollectionrulesgetsample]                                                     | Returns the specified data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesGet.json                                                                                                                                                                                                                                                                                                                                                      |
| [dataCollectionRulesListByResourceGroupSample.ts][datacollectionruleslistbyresourcegroupsample]                     | Lists all data collection rules in the specified resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRulesListBySubscriptionSample.ts][datacollectionruleslistbysubscriptionsample]                       | Lists all data collection rules in the specified subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesListBySubscription.json                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesUpdateSample.ts][datacollectionrulesupdatesample]                                               | Updates part of a data collection rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2021-04-01/examples/DataCollectionRulesUpdate.json                                                                                                                                                                                                                                                                                                                                                       |
| [diagnosticSettingsCategoryGetSample.ts][diagnosticsettingscategorygetsample]                                       | Gets the diagnostic settings category for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/getDiagnosticSettingsCategory.json                                                                                                                                                                                                                                                                                                                |
| [diagnosticSettingsCategoryListSample.ts][diagnosticsettingscategorylistsample]                                     | Lists the diagnostic settings categories for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/listDiagnosticSettingsCategories.json                                                                                                                                                                                                                                                                                                          |
| [diagnosticSettingsCreateOrUpdateSample.ts][diagnosticsettingscreateorupdatesample]                                 | Creates or updates diagnostic settings for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/createOrUpdateDiagnosticSetting.json                                                                                                                                                                                                                                                                                                             |
| [diagnosticSettingsDeleteSample.ts][diagnosticsettingsdeletesample]                                                 | Deletes existing diagnostic settings for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/deleteDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                       |
| [diagnosticSettingsGetSample.ts][diagnosticsettingsgetsample]                                                       | Gets the active diagnostic settings for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/getDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                           |
| [diagnosticSettingsListSample.ts][diagnosticsettingslistsample]                                                     | Gets the active diagnostic settings list for the specified resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-05-01-preview/examples/listDiagnosticSettings.json                                                                                                                                                                                                                                                                                                                    |
| [eventCategoriesListSample.ts][eventcategorieslistsample]                                                           | Get the list of available event categories supported in the Activity Logs Service.<br>The current list includes the following: Administrative, Security, ServiceHealth, Alert, Recommendation, Policy. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/GetEventCategories.json                                                                                                                                                                                               |
| [logProfilesCreateOrUpdateSample.ts][logprofilescreateorupdatesample]                                               | Create or update a log profile in Azure Monitoring REST API. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/createOrUpdateLogProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesDeleteSample.ts][logprofilesdeletesample]                                                               | Deletes the log profile. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/deleteLogProfile.json                                                                                                                                                                                                                                                                                                                                                                               |
| [logProfilesGetSample.ts][logprofilesgetsample]                                                                     | Gets the log profile. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/getLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                     |
| [logProfilesListSample.ts][logprofileslistsample]                                                                   | List the log profiles. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/listLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesUpdateSample.ts][logprofilesupdatesample]                                                               | Updates an existing LogProfilesResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2016-03-01/examples/patchLogProfile.json                                                                                                                                                                                                                                                                                                          |
| [metricAlertsCreateOrUpdateSample.ts][metricalertscreateorupdatesample]                                             | Create or update an metric alert definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/createOrUpdateDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                           |
| [metricAlertsDeleteSample.ts][metricalertsdeletesample]                                                             | Delete an alert rule definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/deleteMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsGetSample.ts][metricalertsgetsample]                                                                   | Retrieve an alert rule definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/getDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                                                |
| [metricAlertsListByResourceGroupSample.ts][metricalertslistbyresourcegroupsample]                                   | Retrieve alert rule definitions in a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/listMetricAlert.json                                                                                                                                                                                                                                                                                                                                                    |
| [metricAlertsListBySubscriptionSample.ts][metricalertslistbysubscriptionsample]                                     | Retrieve alert rule definitions in a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/listMetricAlert.json                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsStatusListByNameSample.ts][metricalertsstatuslistbynamesample]                                         | Retrieve an alert rule status. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/getMetricAlertStatusByName.json                                                                                                                                                                                                                                                                                                                                                               |
| [metricAlertsStatusListSample.ts][metricalertsstatuslistsample]                                                     | Retrieve an alert rule status. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/getMetricAlertStatus.json                                                                                                                                                                                                                                                                                                                                                                     |
| [metricAlertsUpdateSample.ts][metricalertsupdatesample]                                                             | Update an metric alert definition. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-03-01/examples/UpdateMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                    |
| [metricDefinitionsListSample.ts][metricdefinitionslistsample]                                                       | Lists the metric definitions for the resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-01-01/examples/GetMetricDefinitionsApplicationInsights.json                                                                                                                                                                                                                                                                                                                                  |
| [metricNamespacesListSample.ts][metricnamespaceslistsample]                                                         | Lists the metric namespaces for the resource. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2017-12-01-preview/examples/GetMetricNamespaces.json                                                                                                                                                                                                                                                                                                                                              |
| [metricsListSample.ts][metricslistsample]                                                                           | **Lists the metric values for a resource**. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-01-01/examples/GetMetric.json                                                                                                                                                                                                                                                                                                                                                                   |
| [operationsListSample.ts][operationslistsample]                                                                     | Lists all of the available operations from Microsoft.Insights provider. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/OperationList.json                                                                                                                                                                                                                                                                                                                                   |
| [privateEndpointConnectionsCreateOrUpdateSample.ts][privateendpointconnectionscreateorupdatesample]                 | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionUpdate.json                                                                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                                 | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionDelete.json                                                                                                                                                                                                                                                                                                                       |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                                       | Gets a private endpoint connection. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionGet.json                                                                                                                                                                                                                                                                                                                                               |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.ts][privateendpointconnectionslistbyprivatelinkscopesample] | Gets all private endpoint connections on a private link scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateEndpointConnectionList.json                                                                                                                                                                                                                                                                                                                   |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                                   | Gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopePrivateLinkResourceGet.json                                                                                                                                                                                                                                                                           |
| [privateLinkResourcesListByPrivateLinkScopeSample.ts][privatelinkresourceslistbyprivatelinkscopesample]             | Gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopePrivateLinkResourceListGet.json                                                                                                                                                                                                                                                                       |
| [privateLinkScopeOperationStatusGetSample.ts][privatelinkscopeoperationstatusgetsample]                             | Get the status of an azure asynchronous operation associated with a private link scope operation. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/privateLinkScopeOperationStatuses.json                                                                                                                                                                                                                                                                            |
| [privateLinkScopedResourcesCreateOrUpdateSample.ts][privatelinkscopedresourcescreateorupdatesample]                 | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceUpdate.json                                                                                                                                                                                                                                                                                                             |
| [privateLinkScopedResourcesDeleteSample.ts][privatelinkscopedresourcesdeletesample]                                 | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceDelete.json                                                                                                                                                                                                                                                                                                                       |
| [privateLinkScopedResourcesGetSample.ts][privatelinkscopedresourcesgetsample]                                       | Gets a scoped resource in a private link scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceGet.json                                                                                                                                                                                                                                                                                                                                   |
| [privateLinkScopedResourcesListByPrivateLinkScopeSample.ts][privatelinkscopedresourceslistbyprivatelinkscopesample] | Gets all private endpoint connections on a private link scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopedResourceList.json                                                                                                                                                                                                                                                                                                                   |
| [privateLinkScopesCreateOrUpdateSample.ts][privatelinkscopescreateorupdatesample]                                   | Creates (or updates) a Azure Monitor PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesCreate.json                                                                                                                                                                                                                               |
| [privateLinkScopesDeleteSample.ts][privatelinkscopesdeletesample]                                                   | Deletes a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesDelete.json                                                                                                                                                                                                                                                                                                                                              |
| [privateLinkScopesGetSample.ts][privatelinkscopesgetsample]                                                         | Returns a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesGet.json                                                                                                                                                                                                                                                                                                                                                 |
| [privateLinkScopesListByResourceGroupSample.ts][privatelinkscopeslistbyresourcegroupsample]                         | Gets a list of Azure Monitor PrivateLinkScopes within a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesListByResourceGroup.json                                                                                                                                                                                                                                                                                                   |
| [privateLinkScopesListSample.ts][privatelinkscopeslistsample]                                                       | Gets a list of all Azure Monitor PrivateLinkScopes within a subscription. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesList.json                                                                                                                                                                                                                                                                                                                |
| [privateLinkScopesUpdateTagsSample.ts][privatelinkscopesupdatetagssample]                                           | Updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2019-10-17-preview/examples/PrivateLinkScopesUpdateTagsOnly.json                                                                                                                                                                                                                                                                             |
| [scheduledQueryRulesCreateOrUpdateSample.ts][scheduledqueryrulescreateorupdatesample]                               | Creates or updates an log search rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/createOrUpdateScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                |
| [scheduledQueryRulesDeleteSample.ts][scheduledqueryrulesdeletesample]                                               | Deletes a Log Search rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/deleteScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                                     |
| [scheduledQueryRulesGetSample.ts][scheduledqueryrulesgetsample]                                                     | Gets an Log Search rule x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/getScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                                          |
| [scheduledQueryRulesListByResourceGroupSample.ts][scheduledqueryruleslistbyresourcegroupsample]                     | List the Log Search rules within a resource group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/listScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                              |
| [scheduledQueryRulesListBySubscriptionSample.ts][scheduledqueryruleslistbysubscriptionsample]                       | List the Log Search rules within a subscription group. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/listScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                          |
| [scheduledQueryRulesUpdateSample.ts][scheduledqueryrulesupdatesample]                                               | Update log search Rule. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2018-04-16/examples/patchScheduledQueryRules.json                                                                                                                                                                                                                                                                                                                                                                        |
| [tenantActivityLogsListSample.ts][tenantactivitylogslistsample]                                                     | Gets the Activity Logs for the Tenant.<br>Everything that is applicable to the API to get the Activity Logs for the subscription is applicable to this API (the parameters, $filter, etc.).<br>One thing to point out here is that this API does _not_ retrieve the logs at the individual subscription of the tenant but only surfaces the logs that were generated at the tenant level. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/stable/2015-04-01/examples/GetTenantActivityLogsFiltered.json |
| [vmInsightsGetOnboardingStatusSample.ts][vminsightsgetonboardingstatussample]                                       | Retrieves the VM Insights onboarding status for the specified resource or resource scope. x-ms-original-file: specification/monitor/resource-manager/Microsoft.Insights/preview/2018-11-27-preview/examples/getOnboardingStatusVMScaleSet.json                                                                                                                                                                                                                                                                                        |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://nodejs.org/about/releases/).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/actionGroupsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node dist/actionGroupsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[actiongroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsCreateOrUpdateSample.ts
[actiongroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsDeleteSample.ts
[actiongroupsenablereceiversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsEnableReceiverSample.ts
[actiongroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsGetSample.ts
[actiongroupsgettestnotificationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsGetTestNotificationsSample.ts
[actiongroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsListByResourceGroupSample.ts
[actiongroupslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsListBySubscriptionIdSample.ts
[actiongroupsposttestnotificationssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsPostTestNotificationsSample.ts
[actiongroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/actionGroupsUpdateSample.ts
[activitylogalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogAlertsCreateOrUpdateSample.ts
[activitylogalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogAlertsDeleteSample.ts
[activitylogalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogAlertsGetSample.ts
[activitylogalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogAlertsListByResourceGroupSample.ts
[activitylogalertslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogAlertsListBySubscriptionIdSample.ts
[activitylogalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogAlertsUpdateSample.ts
[activitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/activityLogsListSample.ts
[alertruleincidentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRuleIncidentsGetSample.ts
[alertruleincidentslistbyalertrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRuleIncidentsListByAlertRuleSample.ts
[alertrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRulesCreateOrUpdateSample.ts
[alertrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRulesDeleteSample.ts
[alertrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRulesGetSample.ts
[alertruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRulesListByResourceGroupSample.ts
[alertruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRulesListBySubscriptionSample.ts
[alertrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/alertRulesUpdateSample.ts
[autoscalesettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/autoscaleSettingsCreateOrUpdateSample.ts
[autoscalesettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/autoscaleSettingsDeleteSample.ts
[autoscalesettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/autoscaleSettingsGetSample.ts
[autoscalesettingslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/autoscaleSettingsListByResourceGroupSample.ts
[autoscalesettingslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/autoscaleSettingsListBySubscriptionSample.ts
[autoscalesettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/autoscaleSettingsUpdateSample.ts
[baselineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/baselinesListSample.ts
[datacollectionendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionEndpointsCreateSample.ts
[datacollectionendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionEndpointsDeleteSample.ts
[datacollectionendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionEndpointsGetSample.ts
[datacollectionendpointslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionEndpointsListByResourceGroupSample.ts
[datacollectionendpointslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionEndpointsListBySubscriptionSample.ts
[datacollectionendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionEndpointsUpdateSample.ts
[datacollectionruleassociationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRuleAssociationsCreateSample.ts
[datacollectionruleassociationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRuleAssociationsDeleteSample.ts
[datacollectionruleassociationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRuleAssociationsGetSample.ts
[datacollectionruleassociationslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRuleAssociationsListByResourceSample.ts
[datacollectionruleassociationslistbyrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRuleAssociationsListByRuleSample.ts
[datacollectionrulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRulesCreateSample.ts
[datacollectionrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRulesDeleteSample.ts
[datacollectionrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRulesGetSample.ts
[datacollectionruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRulesListByResourceGroupSample.ts
[datacollectionruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRulesListBySubscriptionSample.ts
[datacollectionrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/dataCollectionRulesUpdateSample.ts
[diagnosticsettingscategorygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/diagnosticSettingsCategoryGetSample.ts
[diagnosticsettingscategorylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/diagnosticSettingsCategoryListSample.ts
[diagnosticsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/diagnosticSettingsCreateOrUpdateSample.ts
[diagnosticsettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/diagnosticSettingsDeleteSample.ts
[diagnosticsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/diagnosticSettingsGetSample.ts
[diagnosticsettingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/diagnosticSettingsListSample.ts
[eventcategorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/eventCategoriesListSample.ts
[logprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/logProfilesCreateOrUpdateSample.ts
[logprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/logProfilesDeleteSample.ts
[logprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/logProfilesGetSample.ts
[logprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/logProfilesListSample.ts
[logprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/logProfilesUpdateSample.ts
[metricalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsCreateOrUpdateSample.ts
[metricalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsDeleteSample.ts
[metricalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsGetSample.ts
[metricalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsListByResourceGroupSample.ts
[metricalertslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsListBySubscriptionSample.ts
[metricalertsstatuslistbynamesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsStatusListByNameSample.ts
[metricalertsstatuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsStatusListSample.ts
[metricalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricAlertsUpdateSample.ts
[metricdefinitionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricDefinitionsListSample.ts
[metricnamespaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricNamespacesListSample.ts
[metricslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/metricsListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/operationsListSample.ts
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateEndpointConnectionsCreateOrUpdateSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateEndpointConnectionsListByPrivateLinkScopeSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkResourcesGetSample.ts
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkResourcesListByPrivateLinkScopeSample.ts
[privatelinkscopeoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopeOperationStatusGetSample.ts
[privatelinkscopedresourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopedResourcesCreateOrUpdateSample.ts
[privatelinkscopedresourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopedResourcesDeleteSample.ts
[privatelinkscopedresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopedResourcesGetSample.ts
[privatelinkscopedresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopedResourcesListByPrivateLinkScopeSample.ts
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopesCreateOrUpdateSample.ts
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopesDeleteSample.ts
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopesGetSample.ts
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopesListByResourceGroupSample.ts
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopesListSample.ts
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/privateLinkScopesUpdateTagsSample.ts
[scheduledqueryrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/scheduledQueryRulesCreateOrUpdateSample.ts
[scheduledqueryrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/scheduledQueryRulesDeleteSample.ts
[scheduledqueryrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/scheduledQueryRulesGetSample.ts
[scheduledqueryruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/scheduledQueryRulesListByResourceGroupSample.ts
[scheduledqueryruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/scheduledQueryRulesListBySubscriptionSample.ts
[scheduledqueryrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/scheduledQueryRulesUpdateSample.ts
[tenantactivitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/tenantActivityLogsListSample.ts
[vminsightsgetonboardingstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v7/typescript/src/vmInsightsGetOnboardingStatusSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-monitor?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/monitor/arm-monitor/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
