sdk/monitor/arm-monitor/samples/v8/typescript/README.md
# @azure/arm-monitor client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-monitor in some common scenarios.

| **File Name**                                                                                                                           | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| --------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.ts][actiongroupscreatenotificationsatactiongroupresourcelevelsample]   | send test notifications to a set of provided receivers x-ms-original-file: 2024-10-01-preview/postTestNotificationsAtActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                          |
| [actionGroupsCreateOrUpdateSample.ts][actiongroupscreateorupdatesample]                                                                 | create a new action group or update an existing one. x-ms-original-file: 2024-10-01-preview/createOrUpdateActionGroup.json                                                                                                                                                                                                                                                                                                                                  |
| [actionGroupsDeleteSample.ts][actiongroupsdeletesample]                                                                                 | delete an action group. x-ms-original-file: 2024-10-01-preview/deleteActionGroup.json                                                                                                                                                                                                                                                                                                                                                                       |
| [actionGroupsEnableReceiverSample.ts][actiongroupsenablereceiversample]                                                                 | enable a receiver in an action group. This changes the receiver's status from Disabled to Enabled. This operation is only supported for Email or SMS receivers. x-ms-original-file: 2024-10-01-preview/enableReceiver.json                                                                                                                                                                                                                                  |
| [actionGroupsGetNSPSample.ts][actiongroupsgetnspsample]                                                                                 | gets a specified NSP configuration for specified action group. x-ms-original-file: 2021-10-01/NSPForActionGroups_Get.json                                                                                                                                                                                                                                                                                                                                   |
| [actionGroupsGetSample.ts][actiongroupsgetsample]                                                                                       | get an action group. x-ms-original-file: 2024-10-01-preview/getActionGroup.json                                                                                                                                                                                                                                                                                                                                                                             |
| [actionGroupsGetTestNotificationsAtActionGroupResourceLevelSample.ts][actiongroupsgettestnotificationsatactiongroupresourcelevelsample] | get the test notifications by the notification id x-ms-original-file: 2024-10-01-preview/getTestNotificationsAtActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                                |
| [actionGroupsListByResourceGroupSample.ts][actiongroupslistbyresourcegroupsample]                                                       | get a list of all action groups in a resource group. x-ms-original-file: 2024-10-01-preview/listActionGroupsByResourceGroup.json                                                                                                                                                                                                                                                                                                                            |
| [actionGroupsListBySubscriptionIdSample.ts][actiongroupslistbysubscriptionidsample]                                                     | get a list of all action groups in a subscription. x-ms-original-file: 2024-10-01-preview/listActionGroups.json                                                                                                                                                                                                                                                                                                                                             |
| [actionGroupsListNSPSample.ts][actiongroupslistnspsample]                                                                               | gets a list of NSP configurations for specified action group. x-ms-original-file: 2021-10-01/NSPForActionGroups_List.json                                                                                                                                                                                                                                                                                                                                   |
| [actionGroupsReconcileNSPSample.ts][actiongroupsreconcilenspsample]                                                                     | reconciles a specified NSP configuration for specified action group. x-ms-original-file: 2021-10-01/NSPForActionGroups_Reconcile.json                                                                                                                                                                                                                                                                                                                       |
| [actionGroupsUpdateSample.ts][actiongroupsupdatesample]                                                                                 | updates an existing action group's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2024-10-01-preview/patchActionGroup.json                                                                                                                                                                                                                                                                                                 |
| [activityLogAlertsCreateOrUpdateSample.ts][activitylogalertscreateorupdatesample]                                                       | create a new Activity Log Alert rule or update an existing one. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                             |
| [activityLogAlertsDeleteSample.ts][activitylogalertsdeletesample]                                                                       | delete an Activity Log Alert rule. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_Delete.json                                                                                                                                                                                                                                                                                                                                                  |
| [activityLogAlertsGetSample.ts][activitylogalertsgetsample]                                                                             | get an Activity Log Alert rule. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_Get.json                                                                                                                                                                                                                                                                                                                                                        |
| [activityLogAlertsListByResourceGroupSample.ts][activitylogalertslistbyresourcegroupsample]                                             | get a list of all Activity Log Alert rules in a resource group. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_ListByResourceGroupName.json                                                                                                                                                                                                                                                                                                    |
| [activityLogAlertsListBySubscriptionIdSample.ts][activitylogalertslistbysubscriptionidsample]                                           | get a list of all Activity Log Alert rules in a subscription. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_ListBySubscriptionId.json                                                                                                                                                                                                                                                                                                         |
| [activityLogAlertsUpdateSample.ts][activitylogalertsupdatesample]                                                                       | updates 'tags' and 'enabled' fields in an existing Alert rule. This method is used to update the Alert rule tags, and to enable or disable the Alert rule. To update other fields use CreateOrUpdate operation. x-ms-original-file: 2023-01-01-preview/ActivityLogAlertRule_Update.json                                                                                                                                                                     |
| [activityLogsListSample.ts][activitylogslistsample]                                                                                     | provides the list of records from the activity logs. x-ms-original-file: 2015-04-01/GetActivityLogsFiltered.json                                                                                                                                                                                                                                                                                                                                            |
| [alertRuleIncidentsGetSample.ts][alertruleincidentsgetsample]                                                                           | gets an incident associated to an alert rule x-ms-original-file: 2016-03-01/getAlertRuleIncident.json                                                                                                                                                                                                                                                                                                                                                       |
| [alertRuleIncidentsListByAlertRuleSample.ts][alertruleincidentslistbyalertrulesample]                                                   | gets a list of incidents associated to an alert rule x-ms-original-file: 2016-03-01/listAlertRuleIncidents.json                                                                                                                                                                                                                                                                                                                                             |
| [autoscaleSettingsCreateOrUpdateSample.ts][autoscalesettingscreateorupdatesample]                                                       | creates or updates an autoscale setting. x-ms-original-file: 2022-10-01/createOrUpdateAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                 |
| [autoscaleSettingsDeleteSample.ts][autoscalesettingsdeletesample]                                                                       | deletes and autoscale setting x-ms-original-file: 2022-10-01/deleteAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                    |
| [autoscaleSettingsGetSample.ts][autoscalesettingsgetsample]                                                                             | gets an autoscale setting x-ms-original-file: 2022-10-01/getAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                                           |
| [autoscaleSettingsListByResourceGroupSample.ts][autoscalesettingslistbyresourcegroupsample]                                             | lists the autoscale settings for a resource group x-ms-original-file: 2022-10-01/listAutoscaleSetting.json                                                                                                                                                                                                                                                                                                                                                  |
| [autoscaleSettingsListBySubscriptionSample.ts][autoscalesettingslistbysubscriptionsample]                                               | lists the autoscale settings for a subscription x-ms-original-file: 2022-10-01/listAutoscaleSettingBySubscription.json                                                                                                                                                                                                                                                                                                                                      |
| [autoscaleSettingsUpdateSample.ts][autoscalesettingsupdatesample]                                                                       | updates an existing AutoscaleSettingsResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2022-10-01/patchAutoscaleSetting.json                                                                                                                                                                                                                                                                                              |
| [baselinesListSample.ts][baselineslistsample]                                                                                           | **Lists the metric baseline values for a resource**. x-ms-original-file: 2019-03-01/metricBaselines.json                                                                                                                                                                                                                                                                                                                                                    |
| [createNotificationsAtTenantActionGroupResourceLevelSample.ts][createnotificationsattenantactiongroupresourcelevelsample]               | send test notifications to a set of provided receivers x-ms-original-file: 2023-05-01-preview/postTestNotificationsAtTenantActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                    |
| [dataCollectionEndpointsCreateSample.ts][datacollectionendpointscreatesample]                                                           | creates or updates a data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsCreate.json                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionEndpointsDeleteSample.ts][datacollectionendpointsdeletesample]                                                           | deletes a data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsDelete.json                                                                                                                                                                                                                                                                                                                                                       |
| [dataCollectionEndpointsGetNSPSample.ts][datacollectionendpointsgetnspsample]                                                           | gets the specified NSP configuration for the specified data collection endpoint. x-ms-original-file: 2021-10-01/NSPForDataCollectionEndpoints_Get.json                                                                                                                                                                                                                                                                                                      |
| [dataCollectionEndpointsGetSample.ts][datacollectionendpointsgetsample]                                                                 | returns the specified data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsGet.json                                                                                                                                                                                                                                                                                                                                              |
| [dataCollectionEndpointsListByResourceGroupSample.ts][datacollectionendpointslistbyresourcegroupsample]                                 | lists all data collection endpoints in the specified resource group. x-ms-original-file: 2024-03-11/DataCollectionEndpointsListByResourceGroup.json                                                                                                                                                                                                                                                                                                         |
| [dataCollectionEndpointsListBySubscriptionSample.ts][datacollectionendpointslistbysubscriptionsample]                                   | lists all data collection endpoints in the specified subscription x-ms-original-file: 2024-03-11/DataCollectionEndpointsListBySubscription.json                                                                                                                                                                                                                                                                                                             |
| [dataCollectionEndpointsListNSPSample.ts][datacollectionendpointslistnspsample]                                                         | gets a list of NSP configurations for the specified data collection endpoint. x-ms-original-file: 2021-10-01/NSPForDataCollectionEndpoints_List.json                                                                                                                                                                                                                                                                                                        |
| [dataCollectionEndpointsReconcileNSPSample.ts][datacollectionendpointsreconcilenspsample]                                               | reconciles the specified NSP configuration for the specified data collection endpoint. x-ms-original-file: 2021-10-01/NSPForDataCollectionEndpoints_Reconcile.json                                                                                                                                                                                                                                                                                          |
| [dataCollectionEndpointsUpdateSample.ts][datacollectionendpointsupdatesample]                                                           | updates part of a data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionEndpointsPatch.json                                                                                                                                                                                                                                                                                                                                                |
| [dataCollectionRuleAssociationsCreateSample.ts][datacollectionruleassociationscreatesample]                                             | creates or updates an association. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsCreate.json                                                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRuleAssociationsDeleteSample.ts][datacollectionruleassociationsdeletesample]                                             | deletes an association. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [dataCollectionRuleAssociationsGetSample.ts][datacollectionruleassociationsgetsample]                                                   | returns the specified association. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsGet.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRuleAssociationsListByDataCollectionEndpointSample.ts][datacollectionruleassociationslistbydatacollectionendpointsample] | lists associations for the specified data collection endpoint. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsListByDataCollectionEndpoint.json                                                                                                                                                                                                                                                                                               |
| [dataCollectionRuleAssociationsListByResourceSample.ts][datacollectionruleassociationslistbyresourcesample]                             | lists associations for the specified resource. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsListByResource.json                                                                                                                                                                                                                                                                                                                             |
| [dataCollectionRuleAssociationsListByRuleSample.ts][datacollectionruleassociationslistbyrulesample]                                     | lists associations for the specified data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRuleAssociationsListByRule.json                                                                                                                                                                                                                                                                                                                     |
| [dataCollectionRulesCreateSample.ts][datacollectionrulescreatesample]                                                                   | creates or updates a data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesCreate.json                                                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesDeleteSample.ts][datacollectionrulesdeletesample]                                                                   | deletes a data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesDelete.json                                                                                                                                                                                                                                                                                                                                                               |
| [dataCollectionRulesGetSample.ts][datacollectionrulesgetsample]                                                                         | returns the specified data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesGet.json                                                                                                                                                                                                                                                                                                                                                      |
| [dataCollectionRulesListByResourceGroupSample.ts][datacollectionruleslistbyresourcegroupsample]                                         | lists all data collection rules in the specified resource group. x-ms-original-file: 2024-03-11/DataCollectionRulesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                 |
| [dataCollectionRulesListBySubscriptionSample.ts][datacollectionruleslistbysubscriptionsample]                                           | lists all data collection rules in the specified subscription. x-ms-original-file: 2024-03-11/DataCollectionRulesListBySubscription.json                                                                                                                                                                                                                                                                                                                    |
| [dataCollectionRulesUpdateSample.ts][datacollectionrulesupdatesample]                                                                   | updates part of a data collection rule. x-ms-original-file: 2024-03-11/DataCollectionRulesUpdate.json                                                                                                                                                                                                                                                                                                                                                       |
| [diagnosticSettingsCategoryGetSample.ts][diagnosticsettingscategorygetsample]                                                           | gets the diagnostic settings category for the specified resource. x-ms-original-file: 2021-05-01-preview/getDiagnosticSettingsCategory.json                                                                                                                                                                                                                                                                                                                 |
| [diagnosticSettingsCategoryListSample.ts][diagnosticsettingscategorylistsample]                                                         | lists the diagnostic settings categories for the specified resource. x-ms-original-file: 2021-05-01-preview/listDiagnosticSettingsCategories.json                                                                                                                                                                                                                                                                                                           |
| [diagnosticSettingsCreateOrUpdateSample.ts][diagnosticsettingscreateorupdatesample]                                                     | creates or updates diagnostic settings for the specified resource. x-ms-original-file: 2021-05-01-preview/createOrUpdateDiagnosticSetting.json                                                                                                                                                                                                                                                                                                              |
| [diagnosticSettingsDeleteSample.ts][diagnosticsettingsdeletesample]                                                                     | deletes existing diagnostic settings for the specified resource. x-ms-original-file: 2021-05-01-preview/deleteDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                        |
| [diagnosticSettingsGetSample.ts][diagnosticsettingsgetsample]                                                                           | gets the active diagnostic settings for the specified resource. x-ms-original-file: 2021-05-01-preview/getDiagnosticSetting.json                                                                                                                                                                                                                                                                                                                            |
| [diagnosticSettingsListSample.ts][diagnosticsettingslistsample]                                                                         | gets the active diagnostic settings list for the specified resource. x-ms-original-file: 2021-05-01-preview/listDiagnosticSettings.json                                                                                                                                                                                                                                                                                                                     |
| [eventCategoriesListSample.ts][eventcategorieslistsample]                                                                               | get the list of available event categories supported in the Activity Logs Service.<br>The current list includes the following: Administrative, Security, ServiceHealth, Alert, Recommendation, Policy. x-ms-original-file: 2015-04-01/GetEventCategories.json                                                                                                                                                                                               |
| [getTestNotificationsAtTenantActionGroupResourceLevelSample.ts][gettestnotificationsattenantactiongroupresourcelevelsample]             | get the test notifications by the notification id x-ms-original-file: 2023-05-01-preview/getTestNotificationsAtTenantActionGroupResourceLevel.json                                                                                                                                                                                                                                                                                                          |
| [logProfilesCreateOrUpdateSample.ts][logprofilescreateorupdatesample]                                                                   | create or update a log profile in Azure Monitoring REST API. x-ms-original-file: 2016-03-01/createOrUpdateLogProfile.json                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesDeleteSample.ts][logprofilesdeletesample]                                                                                   | deletes the log profile. x-ms-original-file: 2016-03-01/deleteLogProfile.json                                                                                                                                                                                                                                                                                                                                                                               |
| [logProfilesGetSample.ts][logprofilesgetsample]                                                                                         | gets the log profile. x-ms-original-file: 2016-03-01/getLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                     |
| [logProfilesListSample.ts][logprofileslistsample]                                                                                       | list the log profiles. x-ms-original-file: 2016-03-01/listLogProfile.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [logProfilesUpdateSample.ts][logprofilesupdatesample]                                                                                   | updates an existing LogProfilesResource. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2016-03-01/patchLogProfile.json                                                                                                                                                                                                                                                                                                          |
| [metricAlertsCreateOrUpdateSample.ts][metricalertscreateorupdatesample]                                                                 | create or update an metric alert definition. x-ms-original-file: 2026-01-01/createOrUpdateDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                           |
| [metricAlertsDeleteSample.ts][metricalertsdeletesample]                                                                                 | delete an alert rule definition. x-ms-original-file: 2026-01-01/deleteMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsGetSample.ts][metricalertsgetsample]                                                                                       | retrieve an alert rule definition. x-ms-original-file: 2026-01-01/getDynamicMetricAlertMultipleResource.json                                                                                                                                                                                                                                                                                                                                                |
| [metricAlertsListByResourceGroupSample.ts][metricalertslistbyresourcegroupsample]                                                       | retrieve alert rule definitions in a resource group. x-ms-original-file: 2026-01-01/listByResourceGroupMetricAlert.json                                                                                                                                                                                                                                                                                                                                     |
| [metricAlertsListBySubscriptionSample.ts][metricalertslistbysubscriptionsample]                                                         | retrieve alert rule definitions in a subscription. x-ms-original-file: 2026-01-01/listMetricAlert.json                                                                                                                                                                                                                                                                                                                                                      |
| [metricAlertsStatusListByNameSample.ts][metricalertsstatuslistbynamesample]                                                             | retrieve an alert rule status. x-ms-original-file: 2026-01-01/getMetricAlertStatusByName.json                                                                                                                                                                                                                                                                                                                                                               |
| [metricAlertsStatusListSample.ts][metricalertsstatuslistsample]                                                                         | retrieve an alert rule status. x-ms-original-file: 2026-01-01/getMetricAlertStatus.json                                                                                                                                                                                                                                                                                                                                                                     |
| [metricAlertsUpdateSample.ts][metricalertsupdatesample]                                                                                 | update an metric alert definition. x-ms-original-file: 2026-01-01/UpdateMetricAlert.json                                                                                                                                                                                                                                                                                                                                                                    |
| [metricDefinitionsListAtSubscriptionScopeSample.ts][metricdefinitionslistatsubscriptionscopesample]                                     | lists the metric definitions for the subscription. x-ms-original-file: 2024-02-01/GetMultiResourceMetricDefinitions.json                                                                                                                                                                                                                                                                                                                                    |
| [metricDefinitionsListSample.ts][metricdefinitionslistsample]                                                                           | lists the metric definitions for the resource. x-ms-original-file: 2024-02-01/GetMetricDefinitions.json                                                                                                                                                                                                                                                                                                                                                     |
| [metricNamespacesListSample.ts][metricnamespaceslistsample]                                                                             | lists the metric namespaces for the resource. x-ms-original-file: 2024-02-01/GetMetricNamespaces.json                                                                                                                                                                                                                                                                                                                                                       |
| [metricsListAtSubscriptionScopePostSample.ts][metricslistatsubscriptionscopepostsample]                                                 | **Lists the metric data for a subscription**. Parameters can be specified on either query params or the body. This API used the [default ARM throttling limits](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/request-limits-and-throttling). x-ms-original-file: 2024-02-01/PostMultiResourceMetric.json                                                                                                                       |
| [metricsListAtSubscriptionScopeSample.ts][metricslistatsubscriptionscopesample]                                                         | **Lists the metric data for a subscription**. This API used the [default ARM throttling limits](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/request-limits-and-throttling). x-ms-original-file: 2024-02-01/GetMultiResourceMetric.json                                                                                                                                                                                        |
| [metricsListSample.ts][metricslistsample]                                                                                               | **Lists the metric values for a resource**. This API used the [default ARM throttling limits](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/request-limits-and-throttling). x-ms-original-file: 2024-02-01/GetMetric.json                                                                                                                                                                                                       |
| [predictiveMetricGetSample.ts][predictivemetricgetsample]                                                                               | get predictive autoscale metric future data x-ms-original-file: 2022-10-01/GetPredictiveMetric.json                                                                                                                                                                                                                                                                                                                                                         |
| [privateEndpointConnectionsCreateOrUpdateSample.ts][privateendpointconnectionscreateorupdatesample]                                     | approve or reject a private endpoint connection with a given name. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionUpdate.json                                                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionsDeleteSample.ts][privateendpointconnectionsdeletesample]                                                     | deletes a private endpoint connection with a given name. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionDelete.json                                                                                                                                                                                                                                                                                                                        |
| [privateEndpointConnectionsGetSample.ts][privateendpointconnectionsgetsample]                                                           | gets a private endpoint connection. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionGet.json                                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.ts][privateendpointconnectionslistbyprivatelinkscopesample]                     | gets all private endpoint connections on a private link scope. x-ms-original-file: 2023-06-01-preview/PrivateEndpointConnectionList.json                                                                                                                                                                                                                                                                                                                    |
| [privateLinkResourcesGetSample.ts][privatelinkresourcesgetsample]                                                                       | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopePrivateLinkResourceGet.json                                                                                                                                                                                                                                                                            |
| [privateLinkResourcesListByPrivateLinkScopeSample.ts][privatelinkresourceslistbyprivatelinkscopesample]                                 | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopePrivateLinkResourceListGet.json                                                                                                                                                                                                                                                                        |
| [privateLinkScopeOperationStatusGetSample.ts][privatelinkscopeoperationstatusgetsample]                                                 | get the status of an azure asynchronous operation associated with a private link scope operation. x-ms-original-file: 2023-06-01-preview/privateLinkScopeOperationStatuses.json                                                                                                                                                                                                                                                                             |
| [privateLinkScopedResourcesCreateOrUpdateSample.ts][privatelinkscopedresourcescreateorupdatesample]                                     | add an Azure monitor scoped resource in the private link scope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceUpdate.json                                                                                                                                                                                                                                                                                                                 |
| [privateLinkScopedResourcesDeleteSample.ts][privatelinkscopedresourcesdeletesample]                                                     | deletes an Azure monitor scoped resource with a given name. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceDelete.json                                                                                                                                                                                                                                                                                                                     |
| [privateLinkScopedResourcesGetSample.ts][privatelinkscopedresourcesgetsample]                                                           | gets a scoped resource in a private link scope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceGet.json                                                                                                                                                                                                                                                                                                                                    |
| [privateLinkScopedResourcesListByPrivateLinkScopeSample.ts][privatelinkscopedresourceslistbyprivatelinkscopesample]                     | gets all scoped resources on a private link scope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopedResourceList.json                                                                                                                                                                                                                                                                                                                                |
| [privateLinkScopesCreateOrUpdateSample.ts][privatelinkscopescreateorupdatesample]                                                       | creates (or updates) a Azure Monitor PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesCreate.json                                                                                                                                                                                                                                |
| [privateLinkScopesDeleteSample.ts][privatelinkscopesdeletesample]                                                                       | deletes a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesDelete.json                                                                                                                                                                                                                                                                                                                                               |
| [privateLinkScopesGetSample.ts][privatelinkscopesgetsample]                                                                             | returns a Azure Monitor PrivateLinkScope. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesGet.json                                                                                                                                                                                                                                                                                                                                                  |
| [privateLinkScopesListByResourceGroupSample.ts][privatelinkscopeslistbyresourcegroupsample]                                             | gets a list of Azure Monitor PrivateLinkScopes within a resource group. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesListByResourceGroup.json                                                                                                                                                                                                                                                                                                    |
| [privateLinkScopesListSample.ts][privatelinkscopeslistsample]                                                                           | gets a list of all Azure Monitor PrivateLinkScopes within a subscription. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesList.json                                                                                                                                                                                                                                                                                                                 |
| [privateLinkScopesUpdateTagsSample.ts][privatelinkscopesupdatetagssample]                                                               | updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2023-06-01-preview/PrivateLinkScopesUpdateTagsOnly.json                                                                                                                                                                                                                                                                              |
| [scheduledQueryRuleGetNSPSample.ts][scheduledqueryrulegetnspsample]                                                                     | gets a network security perimeter configuration. x-ms-original-file: 2021-10-01/NSPForScheduledQueryRule_Get.json                                                                                                                                                                                                                                                                                                                                           |
| [scheduledQueryRuleListNSPSample.ts][scheduledqueryrulelistnspsample]                                                                   | gets a list of NSP configurations for specified scheduled query rule. x-ms-original-file: 2021-10-01/NSPForScheduledQueryRule_List.json                                                                                                                                                                                                                                                                                                                     |
| [scheduledQueryRuleReconcileNSPSample.ts][scheduledqueryrulereconcilenspsample]                                                         | reconcile network security perimeter configuration for ScheduledQueryRule resource. x-ms-original-file: 2021-10-01/NSPForScheduledQueryRule_Reconcile.json                                                                                                                                                                                                                                                                                                  |
| [scheduledQueryRulesCreateOrUpdateSample.ts][scheduledqueryrulescreateorupdatesample]                                                   | creates or updates a scheduled query rule. x-ms-original-file: 2025-01-01-preview/createOrUpdateDynamicThresholdScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                     |
| [scheduledQueryRulesDeleteSample.ts][scheduledqueryrulesdeletesample]                                                                   | deletes a scheduled query rule. x-ms-original-file: 2025-01-01-preview/deleteScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                                                        |
| [scheduledQueryRulesGetSample.ts][scheduledqueryrulesgetsample]                                                                         | retrieve an scheduled query rule definition. x-ms-original-file: 2025-01-01-preview/getScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                                              |
| [scheduledQueryRulesListByResourceGroupSample.ts][scheduledqueryruleslistbyresourcegroupsample]                                         | retrieve scheduled query rule definitions in a resource group. x-ms-original-file: 2025-01-01-preview/listScheduledQueryRulesByResourceGroup.json                                                                                                                                                                                                                                                                                                           |
| [scheduledQueryRulesListBySubscriptionSample.ts][scheduledqueryruleslistbysubscriptionsample]                                           | retrieve a scheduled query rule definitions in a subscription. x-ms-original-file: 2025-01-01-preview/listScheduledQueryRulesBySubscription.json                                                                                                                                                                                                                                                                                                            |
| [scheduledQueryRulesUpdateSample.ts][scheduledqueryrulesupdatesample]                                                                   | update a scheduled query rule. x-ms-original-file: 2025-01-01-preview/patchScheduledQueryRule.json                                                                                                                                                                                                                                                                                                                                                          |
| [serviceDiagnosticSettingsCreateOrUpdateSample.ts][servicediagnosticsettingscreateorupdatesample]                                       | create or update new diagnostic settings for the specified resource. **WARNING**: This method will be deprecated in future releases. x-ms-original-file: 2016-09-01/createOrUpdateServiceDiagnosticSetting.json                                                                                                                                                                                                                                             |
| [serviceDiagnosticSettingsGetSample.ts][servicediagnosticsettingsgetsample]                                                             | gets the active diagnostic settings for the specified resource. **WARNING**: This method will be deprecated in future releases. x-ms-original-file: 2016-09-01/getServiceDiagnosticSetting.json                                                                                                                                                                                                                                                             |
| [serviceDiagnosticSettingsUpdateSample.ts][servicediagnosticsettingsupdatesample]                                                       | updates an existing ServiceDiagnosticSettingsResource. To update other fields use the CreateOrUpdate method. **WARNING**: This method will be deprecated in future releases. x-ms-original-file: 2016-09-01/updateServiceDiagnosticSetting.json                                                                                                                                                                                                             |
| [tenantActionGroupsCreateOrUpdateSample.ts][tenantactiongroupscreateorupdatesample]                                                     | create a new tenant action group or update an existing one. x-ms-original-file: 2023-05-01-preview/createOrUpdateTenantActionGroup.json                                                                                                                                                                                                                                                                                                                     |
| [tenantActionGroupsDeleteSample.ts][tenantactiongroupsdeletesample]                                                                     | delete a tenant action group. x-ms-original-file: 2023-05-01-preview/deleteTenantActionGroup.json                                                                                                                                                                                                                                                                                                                                                           |
| [tenantActionGroupsGetSample.ts][tenantactiongroupsgetsample]                                                                           | get a tenant action group. x-ms-original-file: 2023-05-01-preview/getTenantActionGroup.json                                                                                                                                                                                                                                                                                                                                                                 |
| [tenantActionGroupsListByManagementGroupIdSample.ts][tenantactiongroupslistbymanagementgroupidsample]                                   | get a list of all tenant action groups in a management group. x-ms-original-file: 2023-05-01-preview/listTenantActionGroups.json                                                                                                                                                                                                                                                                                                                            |
| [tenantActionGroupsUpdateSample.ts][tenantactiongroupsupdatesample]                                                                     | updates an existing tenant action group's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2023-05-01-preview/patchTenantActionGroup.json                                                                                                                                                                                                                                                                                    |
| [tenantActivityLogsListSample.ts][tenantactivitylogslistsample]                                                                         | gets the Activity Logs for the Tenant.<br>Everything that is applicable to the API to get the Activity Logs for the subscription is applicable to this API (the parameters, $filter, etc.).<br>One thing to point out here is that this API does _not_ retrieve the logs at the individual subscription of the tenant but only surfaces the logs that were generated at the tenant level. x-ms-original-file: 2015-04-01/GetTenantActivityLogsFiltered.json |
| [vMInsightsGetOnboardingStatusSample.ts][vminsightsgetonboardingstatussample]                                                           | retrieves the VM Insights onboarding status for the specified resource or resource scope. x-ms-original-file: 2018-11-27-preview/getOnboardingStatusResourceGroup.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[actiongroupscreatenotificationsatactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsCreateNotificationsAtActionGroupResourceLevelSample.ts
[actiongroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsCreateOrUpdateSample.ts
[actiongroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsDeleteSample.ts
[actiongroupsenablereceiversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsEnableReceiverSample.ts
[actiongroupsgetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsGetNSPSample.ts
[actiongroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsGetSample.ts
[actiongroupsgettestnotificationsatactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsGetTestNotificationsAtActionGroupResourceLevelSample.ts
[actiongroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsListByResourceGroupSample.ts
[actiongroupslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsListBySubscriptionIdSample.ts
[actiongroupslistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsListNSPSample.ts
[actiongroupsreconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsReconcileNSPSample.ts
[actiongroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/actionGroupsUpdateSample.ts
[activitylogalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogAlertsCreateOrUpdateSample.ts
[activitylogalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogAlertsDeleteSample.ts
[activitylogalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogAlertsGetSample.ts
[activitylogalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogAlertsListByResourceGroupSample.ts
[activitylogalertslistbysubscriptionidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogAlertsListBySubscriptionIdSample.ts
[activitylogalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogAlertsUpdateSample.ts
[activitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/activityLogsListSample.ts
[alertruleincidentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/alertRuleIncidentsGetSample.ts
[alertruleincidentslistbyalertrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/alertRuleIncidentsListByAlertRuleSample.ts
[autoscalesettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/autoscaleSettingsCreateOrUpdateSample.ts
[autoscalesettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/autoscaleSettingsDeleteSample.ts
[autoscalesettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/autoscaleSettingsGetSample.ts
[autoscalesettingslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/autoscaleSettingsListByResourceGroupSample.ts
[autoscalesettingslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/autoscaleSettingsListBySubscriptionSample.ts
[autoscalesettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/autoscaleSettingsUpdateSample.ts
[baselineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/baselinesListSample.ts
[createnotificationsattenantactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/createNotificationsAtTenantActionGroupResourceLevelSample.ts
[datacollectionendpointscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsCreateSample.ts
[datacollectionendpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsDeleteSample.ts
[datacollectionendpointsgetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsGetNSPSample.ts
[datacollectionendpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsGetSample.ts
[datacollectionendpointslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsListByResourceGroupSample.ts
[datacollectionendpointslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsListBySubscriptionSample.ts
[datacollectionendpointslistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsListNSPSample.ts
[datacollectionendpointsreconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsReconcileNSPSample.ts
[datacollectionendpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionEndpointsUpdateSample.ts
[datacollectionruleassociationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRuleAssociationsCreateSample.ts
[datacollectionruleassociationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRuleAssociationsDeleteSample.ts
[datacollectionruleassociationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRuleAssociationsGetSample.ts
[datacollectionruleassociationslistbydatacollectionendpointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRuleAssociationsListByDataCollectionEndpointSample.ts
[datacollectionruleassociationslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRuleAssociationsListByResourceSample.ts
[datacollectionruleassociationslistbyrulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRuleAssociationsListByRuleSample.ts
[datacollectionrulescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRulesCreateSample.ts
[datacollectionrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRulesDeleteSample.ts
[datacollectionrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRulesGetSample.ts
[datacollectionruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRulesListByResourceGroupSample.ts
[datacollectionruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRulesListBySubscriptionSample.ts
[datacollectionrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/dataCollectionRulesUpdateSample.ts
[diagnosticsettingscategorygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/diagnosticSettingsCategoryGetSample.ts
[diagnosticsettingscategorylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/diagnosticSettingsCategoryListSample.ts
[diagnosticsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/diagnosticSettingsCreateOrUpdateSample.ts
[diagnosticsettingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/diagnosticSettingsDeleteSample.ts
[diagnosticsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/diagnosticSettingsGetSample.ts
[diagnosticsettingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/diagnosticSettingsListSample.ts
[eventcategorieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/eventCategoriesListSample.ts
[gettestnotificationsattenantactiongroupresourcelevelsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/getTestNotificationsAtTenantActionGroupResourceLevelSample.ts
[logprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/logProfilesCreateOrUpdateSample.ts
[logprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/logProfilesDeleteSample.ts
[logprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/logProfilesGetSample.ts
[logprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/logProfilesListSample.ts
[logprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/logProfilesUpdateSample.ts
[metricalertscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsCreateOrUpdateSample.ts
[metricalertsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsDeleteSample.ts
[metricalertsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsGetSample.ts
[metricalertslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsListByResourceGroupSample.ts
[metricalertslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsListBySubscriptionSample.ts
[metricalertsstatuslistbynamesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsStatusListByNameSample.ts
[metricalertsstatuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsStatusListSample.ts
[metricalertsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricAlertsUpdateSample.ts
[metricdefinitionslistatsubscriptionscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricDefinitionsListAtSubscriptionScopeSample.ts
[metricdefinitionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricDefinitionsListSample.ts
[metricnamespaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricNamespacesListSample.ts
[metricslistatsubscriptionscopepostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricsListAtSubscriptionScopePostSample.ts
[metricslistatsubscriptionscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricsListAtSubscriptionScopeSample.ts
[metricslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/metricsListSample.ts
[predictivemetricgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/predictiveMetricGetSample.ts
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateEndpointConnectionsCreateOrUpdateSample.ts
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateEndpointConnectionsDeleteSample.ts
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateEndpointConnectionsGetSample.ts
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateEndpointConnectionsListByPrivateLinkScopeSample.ts
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkResourcesGetSample.ts
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkResourcesListByPrivateLinkScopeSample.ts
[privatelinkscopeoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopeOperationStatusGetSample.ts
[privatelinkscopedresourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopedResourcesCreateOrUpdateSample.ts
[privatelinkscopedresourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopedResourcesDeleteSample.ts
[privatelinkscopedresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopedResourcesGetSample.ts
[privatelinkscopedresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopedResourcesListByPrivateLinkScopeSample.ts
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopesCreateOrUpdateSample.ts
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopesDeleteSample.ts
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopesGetSample.ts
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopesListByResourceGroupSample.ts
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopesListSample.ts
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/privateLinkScopesUpdateTagsSample.ts
[scheduledqueryrulegetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRuleGetNSPSample.ts
[scheduledqueryrulelistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRuleListNSPSample.ts
[scheduledqueryrulereconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRuleReconcileNSPSample.ts
[scheduledqueryrulescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRulesCreateOrUpdateSample.ts
[scheduledqueryrulesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRulesDeleteSample.ts
[scheduledqueryrulesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRulesGetSample.ts
[scheduledqueryruleslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRulesListByResourceGroupSample.ts
[scheduledqueryruleslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRulesListBySubscriptionSample.ts
[scheduledqueryrulesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/scheduledQueryRulesUpdateSample.ts
[servicediagnosticsettingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/serviceDiagnosticSettingsCreateOrUpdateSample.ts
[servicediagnosticsettingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/serviceDiagnosticSettingsGetSample.ts
[servicediagnosticsettingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/serviceDiagnosticSettingsUpdateSample.ts
[tenantactiongroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/tenantActionGroupsCreateOrUpdateSample.ts
[tenantactiongroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/tenantActionGroupsDeleteSample.ts
[tenantactiongroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/tenantActionGroupsGetSample.ts
[tenantactiongroupslistbymanagementgroupidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/tenantActionGroupsListByManagementGroupIdSample.ts
[tenantactiongroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/tenantActionGroupsUpdateSample.ts
[tenantactivitylogslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/tenantActivityLogsListSample.ts
[vminsightsgetonboardingstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/monitor/arm-monitor/samples/v8/typescript/src/vMInsightsGetOnboardingStatusSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-monitor
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/monitor/arm-monitor/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
